Fixed dark mode

--- a/style.scss
+++ b/style.scss
@@ -9,7 +9,7 @@ html {
 
 body {
   background: $white;
-  font-family: $sans-font-family;
+  font-family: "Open Sans", sans-serif;
   font-weight: 400;
   font-size: 18px;
   line-height: 1.66666666667;
@@ -30,9 +30,19 @@ body {
   overflow-wrap: break-word;
 }
 
-h1, h2, h3, h4, h5, h6,
-p, blockquote, pre,
-ul, ol, dl, figure,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+ul,
+ol,
+dl,
+figure,
 %vertical-rhythm {
   margin-bottom: 15px;
 }
@@ -45,7 +55,12 @@ ul, ol, dl, figure,
   width: 100%;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   margin: 01em 0 15px;
   color: $darkerGray;
   font-family: $sans-font-family;
@@ -60,17 +75,30 @@ h1 {
   }
 }
 
-h2 {font-size: 28px;}
+h2 {
+  font-size: 28px;
+}
 
-h3 {font-size: 24px;}
+h3 {
+  font-size: 24px;
+}
 
-h4 {font-size: 20px;}
+h4 {
+  font-size: 20px;
+}
 
-h5 {font-size: 16px;}
+h5 {
+  font-size: 16px;
+}
 
-h6 {font-size: 14px;}
+h6 {
+  font-size: 14px;
+}
 
-small, .text_small {font-size: 14px;}
+small,
+.text_small {
+  font-size: 14px;
+}
 
 a {
   color: $blue;
@@ -86,7 +114,8 @@ a {
   }
 }
 
-ul, ol {
+ul,
+ol {
   margin: 15px 0;
   padding-left: 30px;
 }
@@ -99,19 +128,25 @@ ol {
   list-style-type: decimal;
 }
 
-ol ul, ul ol, ul ul, ol ol {
+ol ul,
+ul ol,
+ul ul,
+ol ol {
   margin: 0;
 }
 
-ul ul, ol ul {
+ul ul,
+ol ul {
   list-style-type: circle;
 }
 
-em, i {
+em,
+i {
   font-style: italic;
 }
 
-strong, b {
+strong,
+b {
   font-weight: bold;
 }
 
@@ -167,7 +202,7 @@ hr {
     margin-right: 04px;
     cursor: pointer;
     user-select: none;
-    transition: .4s;
+    transition: 0.4s;
   }
 
   .categories-button:hover {
@@ -185,7 +220,7 @@ hr {
   font-weight: bold;
   color: $gray;
   margin-bottom: 30px;
-  }
+}
 
 .no-comments {
   font-weight: bold;
@@ -194,7 +229,7 @@ hr {
 }
 
 .related-posts {
-  .related-posts-heading{
+  .related-posts-heading {
     margin: 0;
     padding: 0;
     font-weight: bold;
@@ -212,24 +247,24 @@ hr {
   margin-bottom: 35px;
   clear: both;
 
-    p {
-      .post-nav-label {
-        margin: 0;
-        padding: 0;
-        font-weight: bold;
-        color: $gray;
-      }
-
-      &:first-child {
-        padding-right: auto;
-        float: left;
-      }
-
-      &:last-child {
-        padding-left: auto;
-        float: right;
-      }
+  p {
+    .post-nav-label {
+      margin: 0;
+      padding: 0;
+      font-weight: bold;
+      color: $gray;
     }
+
+    &:first-child {
+      padding-right: auto;
+      float: left;
+    }
+
+    &:last-child {
+      padding-left: auto;
+      float: right;
+    }
+  }
 }
 
 .category-head {
@@ -258,7 +293,8 @@ blockquote {
     margin-bottom: 0;
   }
 
-  i, em {
+  i,
+  em {
     font-style: normal;
   }
 }
@@ -314,7 +350,7 @@ pre {
   .gutter {
     vertical-align: top;
     user-select: none;
-    opacity: .25;
+    opacity: 0.25;
   }
 }
 
@@ -357,7 +393,8 @@ table {
     }
   }
 
-  th, td {
+  th,
+  td {
     padding: 10px 15px;
   }
 
@@ -381,7 +418,7 @@ table {
     display: block;
     overflow-x: auto;
     -webkit-overflow-scrolling: touch;
-            -ms-overflow-style: -ms-autohiding-scrollbar;
+    -ms-overflow-style: -ms-autohiding-scrollbar;
   }
 }
 
@@ -500,17 +537,17 @@ nav {
     font-weight: 300;
     letter-spacing: 01px;
 
-      &:hover {
-        color: inherit;
-        text-decoration: underline;
-      }
-      &:visited {
-        color: inherit;
-      }
-        @include mobile {
-          margin: 0 10px;
-          color: $blue;
-        }
+    &:hover {
+      color: inherit;
+      text-decoration: underline;
+    }
+    &:visited {
+      color: inherit;
+    }
+    @include mobile {
+      margin: 0 10px;
+      color: $blue;
+    }
   }
 }
 
@@ -524,11 +561,11 @@ a.nav-menu-item:focus {
 .clearfix:after {
   content: " ";
   display: table;
-  }
+}
 
 .clearfix:after {
   clear: both;
-  }
+}
 
 //
 // .main
@@ -545,7 +582,6 @@ a.nav-menu-item:focus {
 }
 
 .post {
-
   .comments {
     margin-top: 10px;
   }
@@ -560,14 +596,14 @@ a.nav-menu-item:focus {
       text-decoration: none;
     }
 
-      &:visited {
-        color: $mahogany;
-      }
+    &:visited {
+      color: $mahogany;
+    }
 
-        &:hover {
-          color: $mahogany;
-          text-decoration: underline;
-        }
+    &:hover {
+      color: $mahogany;
+      text-decoration: underline;
+    }
   }
 
   .reading-time {
@@ -597,9 +633,9 @@ footer {
     padding: 0 04px;
     color: $gray;
 
-      &:hover {
+    &:hover {
       color: $darkGray;
-      }
+    }
   }
 }
 
